# checkpassword-pam

./: .cvsignore  .gitignore  AUTHORS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  checkpassword-pam.8  checkpassword-pam.c  checkpassword-pam.spec.in  config.h.in  configure  configure.ac  logging.h  pam-support.c  pam-support.h  release-checklist.txt
debian/: changelog  checkpassword-pam.files  checkpassword-pam.manpages  control  copyright  rules
www/: .cvsignore  Makefile  index.html
